--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<title>Southern Tier Rugby</title>
-	<link href='http://fonts.googleapis.com/css?family=Italianno' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,900,300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -34,16 +34,14 @@
 			</div>
 		</div>
 	</nav>
-</body>
-
-<paragraph>
 	<div id="heading">
-		80 minutes. 15 positions. 1 game.
+		80 minutes. 15 positions. No Protection.
 	</div>
 	<div id="contact">
 		Contact Us 
-		<br> phone:
+		<br> phone: 
 		<br> fax: 
 		<br> email: 
 	</div>
-</paragraph>
+</body>
+
