--- a/coaches.html
+++ b/coaches.html
@@ -6,7 +6,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	<title>Southern Tier Rugby</title>
-	<link href='http://fonts.googleapis.com/css?family=Italianno' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,900,300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
