--- a/index.html
+++ b/index.html
@@ -39,9 +39,19 @@
 	</div>
 	<div id="contact">
 		Contact Us 
-		<br> phone: 
-		<br> fax: 
-		<br> email: 
+		<br> <span class="glyphicon glyphicon-phone-alt"></span> (607) 727-3930  
+		<br> <span class="glyphicon glyphicon-envelope"></span> alana@southerntierrugby.com 
 	</div>
+	<footer>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-59369522-1', 'auto');
+			ga('send', 'pageview');
+		</script>
+	</footer>
 </body>
+
 
