--- a/index.html
+++ b/index.html
@@ -10,37 +10,43 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-				</button>
-				<a class="navbar-brand" href="index.html"><div id="title">Southern Tier Rugby</div></a>
+	<div id="page-wrap">
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+					</button>
+					<a class="navbar-brand" href="index.html"><div id="title">Southern Tier Rugby</div></a>
+				</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="fallenangels.html">Fallen Angels</a></li>
+								<li><a href="youthclinics.html">Youth Clinics</a></li>
+								<li><a href="coaches.html">Coaches</a></li>
+								<li><a href="founders.html">Founders</a></li>
+								<li><a href="donations.html">Donations<span class="glyphicon glyphicon-piggy-bank pull-right" aria-hidden="true"></span></a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
-			<div id="navbar" class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="fallenangels.html">Fallen Angels</a></li>
-							<li><a href="youthclinics.html">Youth Clinics</a></li>
-							<li><a href="coaches.html">Coaches</a></li>
-							<li><a href="founders.html">Founders</a></li>
-							<li><a href="donations.html">Donations<span class="glyphicon glyphicon-piggy-bank pull-right" aria-hidden="true"></span></a></li>
-						</ul>
-					</li>
-				</ul>
-			</div>
+		</nav>
+		<br><br><br><br>
+		<div class="multiple-borders">
+			<img src="strlogo.jpg" height="500" width="1000">
 		</div>
-	</nav>
-	<div id="heading">
-		80 minutes. 15 positions. No Protection.
-	</div>
-	<div id="contact">
-		Contact Us 
-		<br> <span class="glyphicon glyphicon-phone-alt"></span> (607) 727-3930  
-		<br> <span class="glyphicon glyphicon-envelope"></span> alana@southerntierrugby.com 
+		<div id="heading">
+			80 minutes. 15 positions. No Protection.
+		</div>
+		<div id="contact">
+			Contact Us 
+			<br> <span class="glyphicon glyphicon-phone-alt"></span> (607) 727-3930  
+			<br> <span class="glyphicon glyphicon-envelope"></span> alana@southerntierrugby.com 
+		</div>
 	</div>
 	<footer>
 		<script>
