--- a/ethos.html
+++ b/ethos.html
@@ -38,16 +38,27 @@
 				</div>
 			</nav>
 			<div id="heading">
-				80 minutes. 15 positions. No Protection.
+				Ethos
 			</div>
-				<div id="wrapper">
-					<div id="logo">
-						<img src="logolesswords.jpg" width="500">
-					</div>
-					<div id="intro">
-						We are committed to promoting the game of rugby within the community in order to encourage maximum participation and enjoyment at all levels. 
-					</div>
-				</div>
+			<p>
+				The Southern Tier Rugby Football Club is committed to promote and develop the game of rugby within the community in order to encourage maximum participation and enjoyment at all levels. <br> <br> 
+				The game of rugby is for all and a fellowship for life, that should be contested safely and fairly, with team work and club spirit. <br><br>
+				Rugby stands higherhigher than any individiuals' or groups' agendas and we will promote icreased participation in the sport of rugby in a manner that honors the game and the spirit of competition. <br><br> 
+				We will strive to keep the sportspanship and camraderie associated with rugby above competing motivations. <br><br>
+				Rugby is for everyone and all particpants are treated with respect and given every opportunity to play. <br><br>
+				We will teach and instruct rugby skills, including the history of the game and the honorable tradition of rugby sportsmanship, which promotes and requires respect for teammates, opponents, coaches, and match officials. <br><br><br><br>
+				The committee of the Southern Tier Rugby Football Club is committed to fulfilling and upholding the following values and standards: <br>
+			</p>
+			<ul>
+				<li>To play to win, but to enjoy playing</li>
+				<li>To aspire to be the very best rugby club we can</li>
+				<li>To play as a united club and to foster team spirit across ALL teams</li>
+				<li>To help players achieve their fullest potential - regardless of age, standard, or ability</li>
+				<li>To provide the highest standards of coaching and support possible</li>
+				<li>To foster an environment based on friendship, trust, transparency, and respect</li>
+				<li>To create ambassadors of the club and role models for the game of rugby</li>
+				<li>To promote equal access and opportunity for all</li>
+			</ul>
 			<div id="contact">
 				Contact Us 
 				<br> <span class="glyphicon glyphicon-phone-alt"></span> (607) 727-3930  
