--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
 								<ul class="dropdown-menu" role="menu">
-									<li><a href="ethos.html">Ethos</a>
+									<li><a href="ethos.html">Ethos</a></li>
 									<li><a href="fallenangels.html">Fallen Angels</a></li>
 									<li><a href="youthclinics.html">Youth Clinics</a></li>
 									<li><a href="coaches.html">Coaches</a></li>
@@ -40,14 +40,14 @@
 			<div id="heading">
 				80 minutes. 15 positions. No Protection.
 			</div>
-				<div id="wrapper">
-					<div id="logo">
-						<img src="logolesswords.jpg" width="500">
-					</div>
-					<div id="intro">
-						We are committed to promoting the game of rugby within the community in order to encourage maximum participation and enjoyment at all levels. 
-					</div>
+			<div id="wrapper">
+				<div id="logo">
+					<img src="logolesswords.jpg" width="500">
 				</div>
+				<div id="intro">
+					We are committed to promoting the game of rugby within the community in order to encourage maximum participation and enjoyment at all levels. 
+				</div>
+			</div>
 			<div id="contact">
 				Contact Us 
 				<br> <span class="glyphicon glyphicon-phone-alt"></span> (607) 727-3930  
@@ -55,14 +55,18 @@
 			</div>
 		</div>
 	</div>
-	<footer>
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-			ga('create', 'UA-59369522-1', 'auto');
-			ga('send', 'pageview');
-		</script>
-	</footer>
 </body>
+
+<footer>
+	<div id="me">
+		Design by Jennifer L Bochicchio
+	</div>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-59369522-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+</footer>
