--- a/donations.html
+++ b/donations.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta name="keywords" content="rugby, southern tier, fallen angels, youth, women">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<title>Southern Tier Rugby</title>
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,900,300' rel='stylesheet' type='text/css'>
 </head>
@@ -23,6 +23,7 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
+							<li><a href="ethos.html">Ethos</a></li>
 							<li><a href="fallenangels.html">Fallen Angels</a></li>
 							<li><a href="youthclinics.html">Youth Clinics</a></li>
 							<li><a href="coaches.html">Coaches</a></li>
@@ -37,14 +38,17 @@
 </body>
 
 <footer>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	<div id="me">
+		Design by Jennifer L Bochicchio
+	</div>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-59369522-1', 'auto');
-  ga('send', 'pageview');
+		ga('create', 'UA-59369522-1', 'auto');
+		ga('send', 'pageview');
 
-</script>
+	</script>
 </footer>
