--- a/ethos.html
+++ b/ethos.html
@@ -25,7 +25,7 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
 								<ul class="dropdown-menu" role="menu">
-									<li><a href="ethos.html">Ethos</a>
+									<li><a href="ethos.html">Ethos</a></li>
 									<li><a href="fallenangels.html">Fallen Angels</a></li>
 									<li><a href="youthclinics.html">Youth Clinics</a></li>
 									<li><a href="coaches.html">Coaches</a></li>
@@ -66,14 +66,19 @@
 			</div>
 		</div>
 	</div>
-	<footer>
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-			ga('create', 'UA-59369522-1', 'auto');
-			ga('send', 'pageview');
-		</script>
-	</footer>
 </body>
+<footer>
+	<div id="me">
+		Design by Jennifer L Bochicchio
+	</div>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-59369522-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
+</footer>
