--- a/ethos.html
+++ b/ethos.html
@@ -43,9 +43,9 @@
 			<p>
 				The Southern Tier Rugby Football Club is committed to promote and develop the game of rugby within the community in order to encourage maximum participation and enjoyment at all levels. <br> <br> 
 				The game of rugby is for all and a fellowship for life, that should be contested safely and fairly, with team work and club spirit. <br><br>
-				Rugby stands higherhigher than any individiuals' or groups' agendas and we will promote icreased participation in the sport of rugby in a manner that honors the game and the spirit of competition. <br><br> 
-				We will strive to keep the sportspanship and camraderie associated with rugby above competing motivations. <br><br>
-				Rugby is for everyone and all particpants are treated with respect and given every opportunity to play. <br><br>
+				Rugby stands higher than any individiuals' or groups' agendas and we will promote icreased participation in the sport of rugby in a manner that honors the game and the spirit of competition. <br><br> 
+				We will strive to keep the sportspanship and comradery associated with rugby above competing motivations. <br><br>
+				Rugby is for everyone and all participants are treated with respect and given every opportunity to play. <br><br>
 				We will teach and instruct rugby skills, including the history of the game and the honorable tradition of rugby sportsmanship, which promotes and requires respect for teammates, opponents, coaches, and match officials. <br><br><br><br>
 				The committee of the Southern Tier Rugby Football Club is committed to fulfilling and upholding the following values and standards: <br>
 			</p>
