photo gallery and new css

--- a/ethos.html
+++ b/ethos.html
@@ -53,7 +53,7 @@
 				<li>To play to win, but to enjoy playing</li>
 				<li>To aspire to be the very best rugby club we can</li>
 				<li>To play as a united club and to foster team spirit across ALL teams</li>
-				<li>To help players achieve their fullest potential - regardless of age, standard, or ability</li>
+				<li>To help players achieve their fullest potential &mdash; regardless of age, standard, or ability</li>
 				<li>To provide the highest standards of coaching and support possible</li>
 				<li>To foster an environment based on friendship, trust, transparency, and respect</li>
 				<li>To create ambassadors of the club and role models for the game of rugby</li>
