--- a/faroster.html
+++ b/faroster.html
@@ -2,13 +2,11 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/wowslider.css">
 	<meta name="keywords" content="rugby, southern tier, fallen angels, youth, women">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<title>Southern Tier Rugby</title>
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,900,300' rel='stylesheet' type='text/css'>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 </head>
 
 <body>
@@ -39,29 +37,47 @@
 					</div>
 				</div>
 			</nav>
-			<div id="wrapper">
-				<div id="logo">
-					<img src="ball.jpg" width="500">
-				</div>
-				<div id="intro">
-					Fallen Angels RFC
-					<br>
-					<a href="faroster.html">Team Roster</a>
-				</div>
+			<div id="heading">
+				Team Roster
 			</div>
-			<div id="wowslider-container">
-				<div class="ws_images"><ul>
-					<li><img src="faimages/teampic1.jpg" alt="" title="Fall 2014" id="wows_0"/></li>
-					<li><img src="faimages/teampic2.jpg" alt="" title="" id="wows_1"/></li>
-					<li><img src="faimages/teampic3.jpg" alt="" title="Scrum Stock 2014" id="wows_2"/></li>
-					<li><img src="faimages/fa1.jpg" alt="" title="" id="wows_3"/></li>
-					<li><img src="faimages/fa2.jpg" alt="" title="" id="wows_4"/></li>
-				</ul></div>
-				<a href="#" class="ws_frame"></a>
-				<div class="ws_shadow"></div>
-			</div>
-			<script type="text/javascript" src="wowslider.js"></script>
-			<script type="text/javascript" src="script.js"></script>
+			<p>
+				Paige Beal<br>
+				Jennifer Bochicchio<br>
+				Meghan Brill<br>
+				Carly Burke<br>
+				Miracle Burke<br>
+				Katherine Degnan<br>
+				Kalie Fiorenza<br>
+				Kallie Foltyn<br>
+				Diane Gauvin<br>
+				Jenna Giamundo<br>
+				Alana Gregory<br>
+				Rachel Gurman<br>
+				Christina Imburgia<br>
+				Alisha Inch<br>
+				Jessica Lassak<br>
+				Francesca Lydia<br>
+				Kerry MacCallum<br>
+				Marisa McKay<br>
+				Kelsey McNamara<br>
+				Cecilia Nyman<br>
+				Caileigh O'Rourke<br>
+				Jenna Palazzolo<br>
+				Juliana Pereira<br>
+				Brittany Picket<br>
+				Lauren Rehm<br>
+				Ceara Sammon<br>
+				Michelle Sanford<br>
+				Bethany Smith<br>
+				Kelli Stein<br>
+				Kristy Stephens<br>
+				Jaime Wade<br>
+				Mary Weber<br>
+				Deanna Wood<br>
+				DK Wood<br>
+				Julia Wright<br>
+				Kelly Zduniak<br>
+			</p>
 		</div>
 	</div>
 </body>
