--- a/fallenangels.html
+++ b/fallenangels.html
@@ -44,7 +44,11 @@
 					<img src="ball.jpg" width="500">
 				</div>
 				<div id="intro">
-					Fallen Angels RFC
+					Fallen Angels RFC<br><br>
+					<div text-align="center">
+						Coaches:<br>
+						Mark Minni &amp; Micheal Callan
+					</div>
 					<br>
 					<a href="faroster.html">Team Roster</a>
 				</div>
@@ -62,6 +66,19 @@
 			</div>
 			<script type="text/javascript" src="wowslider.js"></script>
 			<script type="text/javascript" src="script.js"></script>
+			<div id="wrapper">
+				<div id="closing">
+					Please contact us if you would like to be recruited!
+				</div>
+				<div id="logo">
+					<img src="faslide.jpg" width="500">	
+				</div>
+			</div>
+			<div id="contact">
+				Contact Us 
+				<br> <span class="glyphicon glyphicon-phone-alt"></span> (607) 727-3930  
+				<br> <span class="glyphicon glyphicon-envelope"></span> markminni1@msn.com 
+			</div>
 		</div>
 	</div>
 </body>
