--- a/youthclinics.html
+++ b/youthclinics.html
@@ -2,11 +2,13 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/wowslider.css">
 	<meta name="keywords" content="rugby, southern tier, fallen angels, youth, women">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<title>Southern Tier Rugby</title>
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,900,300' rel='stylesheet' type='text/css'>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 </head>
 
 <body>
@@ -20,23 +22,52 @@
 						</button>
 						<a class="navbar-brand" href="index.html"><div id="title">Southern Tier Rugby</div></a>
 					</div>
-			<div id="navbar" class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="ethos.html">Ethos</a></li>
-							<li><a href="fallenangels.html">Fallen Angels</a></li>
-							<li><a href="youthclinics.html">Youth Clinics</a></li>
-							<li><a href="coaches.html">Coaches</a></li>
-							<li><a href="founders.html">Founders</a></li>
-							<li><a href="donations.html">Donations<span class="glyphicon glyphicon-piggy-bank pull-right" aria-hidden="true"></span></a></li>
+					<div id="navbar" class="navbar-collapse collapse">
+						<ul class="nav navbar-nav navbar-right">
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu">
+									<li><a href="ethos.html">Ethos</a></li>
+									<li><a href="fallenangels.html">Fallen Angels</a></li>
+									<li><a href="youthclinics.html">Youth Clinics</a></li>
+									<li><a href="coaches.html">Coaches</a></li>
+									<li><a href="founders.html">Founders</a></li>
+									<li><a href="donations.html">Donations<span class="glyphicon glyphicon-piggy-bank pull-right" aria-hidden="true"></span></a></li>
+								</ul>
+							</li>
 						</ul>
-					</li>
-				</ul>
+					</div>
+				</div>
+			</nav>
+			<div id="wrapper">
+				<div id="logo">
+					<img src="ball.jpg" width="500">
+				</div>
+				<div id="intro">
+					Fallen Angels RFC<br><br>
+					<div text-align="center">
+						Coaches:<br>
+						Mark Minni &amp; Micheal Callan
+					</div>
+					<br>
+					<a href="faroster.html">Team Roster</a>
+				</div>
 			</div>
+			<div id="wowslider-container">
+				<div class="ws_images"><ul>
+					<li><img src="faimages/teampic1.jpg" alt="" title="Fall 2014" id="wows_0"/></li>
+					<li><img src="faimages/teampic2.jpg" alt="" title="" id="wows_1"/></li>
+					<li><img src="faimages/teampic3.jpg" alt="" title="Scrum Stock 2014" id="wows_2"/></li>
+					<li><img src="faimages/fa1.jpg" alt="" title="" id="wows_3"/></li>
+					<li><img src="faimages/fa2.jpg" alt="" title="" id="wows_4"/></li>
+				</ul></div>
+				<a href="#" class="ws_frame"></a>
+				<div class="ws_shadow"></div>
+			</div>
+			<script type="text/javascript" src="wowslider.js"></script>
+			<script type="text/javascript" src="script.js"></script>
 		</div>
-	</nav>
+	</div>
 </body>
 
 <footer>
