game schedule and news page

--- a/fagameschedule.html
+++ b/fagameschedule.html
@@ -2,13 +2,11 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/wowslider.css">
 	<meta name="keywords" content="rugby, southern tier, fallen angels, youth, women">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<title>Southern Tier Rugby</title>
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,900,300' rel='stylesheet' type='text/css'>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 </head>
 
 <body>
@@ -40,26 +38,14 @@
 				</div>
 			</nav>
 			<div id="heading">
-			Saturday Youth Clinics
+				Game Schedule
 			</div>
-			<p>
-				The Southern Tier Rugby Football Club and the YMCA partner to provide children with rugby youth clinics. These are held every Saturday from 10 AM to 2 PM on the 3rd floor of the Binghamton YMCA. 
-			</p>
-			<div id="wowslider-container">
-				<div class="ws_images"><ul>
-					<li><img src="ycimages/youthclinic1.jpg" alt="" title="Spring 2015" id="wows_0"/></li>
-					<li><img src="ycimages/youthclinics2.jpg" alt="" title="" id="wows_1"/></li>
-
-				</ul></div>
-				<a href="#" class="ws_frame"></a>
-				<div class="ws_shadow"></div>
-			</div>
-			<script type="text/javascript" src="wowslider.js"></script>
-			<script type="text/javascript" src="script.js"></script>
-			<div id="contact">
-				Contact Us 
-				<br> <span class="glyphicon glyphicon-phone-alt"></span> (607) 727-3930  
-				<br> <span class="glyphicon glyphicon-envelope"></span> markminni1@msn.com 
+			<div id="list">
+				3/28 - HOME scrimmage with Ithaca<br>
+				*4/11 - <i>tentative</i> AWAY Danbury, CT<br>
+				4/18 - AWAY scrimmage with Buffalo<br>
+				4/25 - HOME scrimmage with Rochester<br>
+				*5/16 - <i>tentative</i> AWAY with Rochester<br>
 			</div>
 		</div>
 	</div>
