--- a/fallenangels.html
+++ b/fallenangels.html
@@ -51,6 +51,8 @@
 					</div>
 					<br>
 					<a href="faroster.html">Team Roster</a>
+					<br><br>
+					<a href="fagameschedule.html">Spring 2015 Game Schedule</a>
 				</div>
 			</div>
 			<div id="wowslider-container">
