--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 					We are committed to promoting the game of rugby within the community in order to encourage maximum participation and enjoyment at all levels. 
 				</div>
 			</div>
+			<div id="news">
+				Make sure to watch the Southern Tier RFC's Fallen Angels msrch in the Binghamton St. Patrick's Day Parade on <i>Saturday March 7th at 12:30 PM</i>!
+			</div>
 			<div id="contact">
 				Contact Us 
 				<br> <span class="glyphicon glyphicon-phone-alt"></span> (607) 727-3930  
