--- a/youthclinics.html
+++ b/youthclinics.html
@@ -40,7 +40,7 @@
 				</div>
 			</nav>
 			<div id="heading">
-			Saturday Youth Clinics
+				Saturday Youth Clinics
 			</div>
 			<p>
 				The Southern Tier Rugby Football Club and the YMCA partner to provide children with rugby youth clinics. These are held every Saturday from 10 AM to 2 PM on the 3rd floor of the Binghamton YMCA. 
@@ -49,7 +49,8 @@
 				<div class="ws_images"><ul>
 					<li><img src="ycimages/youthclinic1.jpg" alt="" title="Spring 2015" id="wows_0"/></li>
 					<li><img src="ycimages/youthclinics2.jpg" alt="" title="" id="wows_1"/></li>
-
+					<li><img src="ycimages/yc3.jpg" alt="" title="" id="wows_1"/></li>
+					<li><img src="ycimages/yc4.jpg" alt="" title="" id="wows_1"/></li>
 				</ul></div>
 				<a href="#" class="ws_frame"></a>
 				<div class="ws_shadow"></div>
