--- a/fallenangels.html
+++ b/fallenangels.html
@@ -62,6 +62,7 @@
 					<li><img src="faimages/teampic3.jpg" alt="" title="Scrum Stock 2014" id="wows_2"/></li>
 					<li><img src="faimages/fa1.jpg" alt="" title="" id="wows_3"/></li>
 					<li><img src="faimages/fa2.jpg" alt="" title="" id="wows_4"/></li>
+					<li><img src="faimages/fapic3.jpg" alt="" title="" id="wows_5"/></li>
 				</ul></div>
 				<a href="#" class="ws_frame"></a>
 				<div class="ws_shadow"></div>
