--- a/fallenangels.html
+++ b/fallenangels.html
@@ -57,12 +57,18 @@
 			</div>
 			<div id="wowslider-container">
 				<div class="ws_images"><ul>
-					<li><img src="faimages/teampic1.jpg" alt="" title="Fall 2014" id="wows_0"/></li>
-					<li><img src="faimages/teampic2.jpg" alt="" title="" id="wows_1"/></li>
-					<li><img src="faimages/teampic3.jpg" alt="" title="Scrum Stock 2014" id="wows_2"/></li>
+					<li><img src="faimages/teampic3.jpg" alt="" title="Roadkill 2014" id="wows_0"/></li>
+					<li><img src="faimages/teampic1.jpg" alt="" title="Fall 2014" id="wows_1"/></li>
+					<li><img src="faimages/teampic2.jpg" alt="" title="" id="wows_2"/></li>
 					<li><img src="faimages/fa1.jpg" alt="" title="" id="wows_3"/></li>
 					<li><img src="faimages/fa2.jpg" alt="" title="" id="wows_4"/></li>
 					<li><img src="faimages/fapic3.jpg" alt="" title="" id="wows_5"/></li>
+					<li><img src="faimages/fa3.jpg" alt="" title="" id="wows_6"/></li>
+					<li><img src="faimages/fa4.jpg" alt="" title="" id="wows_7"/></li>
+					<li><img src="faimages/fa5.jpg" alt="" title="" id="wows_8"/></li>
+					<li><img src="faimages/fa6.jpg" alt="" title="" id="wows_9"/></li>
+					<li><img src="faimages/fa7.jpg" alt="" title="" id="wows_10"/></li>
+					<li><img src="faimages/fa8.jpg" alt="" title="" id="wows_11"/></li>
 				</ul></div>
 				<a href="#" class="ws_frame"></a>
 				<div class="ws_shadow"></div>
@@ -71,7 +77,9 @@
 			<script type="text/javascript" src="script.js"></script>
 			<div id="wrapper">
 				<div id="closing">
-					Please contact us if you would like to be recruited!
+					Interested?<br>
+					The best way to find out about rugby is to come to a practice!
+					<a href="practice.html">Practice Schedule</a>
 				</div>
 				<div id="logo">
 					<img src="faslide.jpg" width="500">	
