--- a/faroster.html
+++ b/faroster.html
@@ -46,25 +46,25 @@
 				Meghan Brill<br>
 				Carly Burke<br>
 				Miracle Burke<br>
+				Sarah Camlic<br>
 				Katherine Degnan<br>
 				Kalie Fiorenza<br>
 				Kallie Foltyn<br>
 				Diane Gauvin<br>
-				Jenna Giamundo<br>
 				Alana Gregory<br>
 				Rachel Gurman<br>
-				Christina Imburgia<br>
+				Cristina Imburgia<br>
 				Alisha Inch<br>
-				Jessica Lassak<br>
-				Francesca Lydia<br>
-				Kerry MacCallum<br>
+				Micgelle Jackson<br>
+				Emily Jane<br>
+				Jessica Lasak<br>
 				Marisa McKay<br>
-				Kelsey McNamara<br>
-				Cecilia Nyman<br>
+				Cecelia Nyman<br>
 				Caileigh O'Rourke<br>
+				Francesca Olivo<br>
 				Jenna Palazzolo<br>
 				Juliana Pereira<br>
-				Brittany Picket<br>
+				Brittany Piket<br>
 				Lauren Rehm<br>
 				Ceara Sammon<br>
 				Michelle Sanford<br>
