--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 			<div id="news">
-				Make sure to watch the Southern Tier RFC's Fallen Angels msrch in the Binghamton St. Patrick's Day Parade on <i>Saturday March 7th at 12:30 PM</i>!
+				Make sure to watch the Southern Tier RFC's Fallen Angels march in the Binghamton St. Patrick's Day Parade on <i>Saturday March 7th at 12:30 PM</i>!
 			</div>
 			<div id="contact">
 				Contact Us 
