--- a/practice.html
+++ b/practice.html
@@ -2,13 +2,11 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/wowslider.css">
 	<meta name="keywords" content="rugby, southern tier, fallen angels, youth, women">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<title>Southern Tier Rugby</title>
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,900,300' rel='stylesheet' type='text/css'>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 </head>
 
 <body>
@@ -40,28 +38,25 @@
 				</div>
 			</nav>
 			<div id="heading">
-				Saturday Youth Clinics
+				Spring 2015 Practice Schedule
 			</div>
-			<p>
-				The Southern Tier Rugby Football Club and the YMCA partner to provide children with rugby youth clinics. These are held Saturdays from 11 AM to 12:30 PM on the 3rd floor of the Binghamton YMCA. 
-			</p>
-			<div id="wowslider-container">
-				<div class="ws_images"><ul>
-					<li><img src="ycimages/youthclinic1.jpg" alt="" title="Spring 2015" id="wows_0"/></li>
-					<li><img src="ycimages/youthclinics2.jpg" alt="" title="" id="wows_1"/></li>
-					<li><img src="ycimages/yc3.jpg" alt="" title="" id="wows_1"/></li>
-					<li><img src="ycimages/yc4.jpg" alt="" title="" id="wows_1"/></li>
-				</ul></div>
-				<a href="#" class="ws_frame"></a>
-				<div class="ws_shadow"></div>
+			<div id="list">
+				Location: Binghamton YMCA Gym &mdash; <i>Third Floor</i><br><br>
+				Times:<br>
+				Thursday 9:30 PM<br>
+				Friday 9:30 PM<br>
+				Saturday 6:00 PM<br>
 			</div>
-			<script type="text/javascript" src="wowslider.js"></script>
-			<script type="text/javascript" src="script.js"></script>
-			<div id="contact">
-				Contact Us 
-				<br> <span class="glyphicon glyphicon-phone-alt"></span> (607) 727-3930  
-				<br> <span class="glyphicon glyphicon-envelope"></span> markminni1@msn.com 
+			<div id="heading">
+				Things to bring to practice:
 			</div>
+			<ul>
+				<li>WATER!</li>
+				<li>Sneakers and cleats</li>
+				<li>Mouthguard &mdash; unless you don't like your teeth</li>
+				<li>Athletic clothing &mdash; synthetic material is ideal</li>
+				<li>Positive attitude!</li>
+			</ul>
 		</div>
 	</div>
 </body>
