--- a/founders.html
+++ b/founders.html
@@ -20,23 +20,30 @@
 						</button>
 						<a class="navbar-brand" href="index.html"><div id="title">Southern Tier Rugby</div></a>
 					</div>
-			<div id="navbar" class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="ethos.html">Ethos</a></li>
-							<li><a href="fallenangels.html">Fallen Angels</a></li>
-							<li><a href="youthclinics.html">Youth Clinics</a></li>
-							<li><a href="coaches.html">Coaches</a></li>
-							<li><a href="founders.html">Founders</a></li>
-							<li><a href="donations.html">Donations<span class="glyphicon glyphicon-piggy-bank pull-right" aria-hidden="true"></span></a></li>
+					<div id="navbar" class="navbar-collapse collapse">
+						<ul class="nav navbar-nav navbar-right">
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Menu <span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu">
+									<li><a href="ethos.html">Ethos</a></li>
+									<li><a href="fallenangels.html">Fallen Angels</a></li>
+									<li><a href="youthclinics.html">Youth Clinics</a></li>
+									<li><a href="coaches.html">Coaches</a></li>
+									<li><a href="founders.html">Founders</a></li>
+									<li><a href="donations.html">Donations<span class="glyphicon glyphicon-piggy-bank pull-right" aria-hidden="true"></span></a></li>
+								</ul>
+							</li>
 						</ul>
-					</li>
-				</ul>
+					</div>
+				</div>
+			</nav>
+			<div id="contact">
+				Contact Us 
+				<br> <span class="glyphicon glyphicon-phone-alt"></span> (607) 727-3930  
+				<br> <span class="glyphicon glyphicon-envelope"></span> markminni1@msn.com 
 			</div>
 		</div>
-	</nav>
+	</div>
 </body>
 
 <footer>
