--- a/faroster.html
+++ b/faroster.html
@@ -40,44 +40,44 @@
 			<div id="heading">
 				Team Roster
 			</div>
-			<p>
-				Paige Beal<br>
-				Jennifer Bochicchio<br>
-				Meghan Brill<br>
-				Carly Burke<br>
-				Miracle Burke<br>
-				Sarah Camlic<br>
-				Katherine Degnan<br>
-				Kalie Fiorenza<br>
-				Kallie Foltyn<br>
-				Diane Gauvin<br>
-				Alana Gregory<br>
-				Rachel Gurman<br>
-				Cristina Imburgia<br>
-				Alisha Inch<br>
-				Micgelle Jackson<br>
-				Emily Jane<br>
-				Jessica Lasak<br>
-				Marisa McKay<br>
-				Cecelia Nyman<br>
-				Caileigh O'Rourke<br>
-				Francesca Olivo<br>
-				Jenna Palazzolo<br>
-				Juliana Pereira<br>
-				Brittany Piket<br>
-				Lauren Rehm<br>
-				Ceara Sammon<br>
-				Michelle Sanford<br>
-				Bethany Smith<br>
-				Kelli Stein<br>
-				Kristy Stephens<br>
-				Jaime Wade<br>
-				Mary Weber<br>
-				Deanna Wood<br>
-				DK Wood<br>
-				Julia Wright<br>
-				Kelly Zduniak<br>
-			</p>
+			<table class="tftable" border="1">
+				<tr><th>Last Name</th><th>First Name</th><th>Position</th></tr>
+				<tr><td>Beal</td><td>Paige</td><td>Prop</td></tr>
+				<tr><td>Bochicchio</td><td>Jennifer</td><td>Second Row/Eight Man</td></tr>
+				<tr><td>Brill</td><td>Meghan</td><td>Tight-Head Prop</td></tr>
+				<tr><td>Burke</td><td>Carly</td><td>*</td></tr>
+				<tr><td>Camlic</td><td>Sarah</td><td>*</td></tr>
+				<tr><td>Degnan</td><td>Katherine</td><td>Outside Center</td></tr>
+				<tr><td>Fiorenza</td><td>Kalie</td><td>Prop</td></tr>
+				<tr><td>Foltyn</td><td>Kallie</td><td>*</td></tr>
+				<tr><td>Gauvin</td><td>Diane</td><td>*</td></tr>
+				<tr><td>Gregory</td><td>Alana</td><td>Fly Half/Scrum Half</td></tr>
+				<tr><td>Gurman</td><td>Rachel</td><td>*</td></tr>
+				<tr><td>Imburgia</td><td>Cristina</td><td>Hooker</td></tr>
+				<tr><td>Inch</td><td>Alisha</td><td>*</td></tr>
+				<tr><td>Jackson</td><td>Michelle</td><td>Second Row/Flanker</td></tr>
+				<tr><td>Jane</td><td>Emily</td><td>*</td></tr>
+				<tr><td>Lasak</td><td>Jessica</td><td>*</td></tr>
+				<tr><td>McKay</td><td>Marisa</td><td>*</td></tr>
+				<tr><td>Nyman</td><td>Cecelia</td><td>Prop</td></tr>
+				<tr><td>O'Rourke</td><td>Caleigh</td><td>*</td></tr>
+				<tr><td>Olivo</td><td>Francesca</td><td>Second Row</td></tr>
+				<tr><td>Palazzolo</td><td>Jenna</td><td>*</td></tr>
+				<tr><td>Pereira</td><td>Juliana</td><td>Scrum Half</td></tr>
+				<tr><td>Piket</td><td>Brittany</td><td>Row:23 Cell:3</td></tr>
+				<tr><td>Rehm</td><td>Lauren</td><td>*</td></tr>
+				<tr><td>Sammon</td><td>Ceara</td><td>Scrum Half</td></tr>
+				<tr><td>Sanford</td><td>Michelle</td><td>*</td></tr>
+				<tr><td>Smith</td><td>Bethany</td><td>*</td></tr>
+				<tr><td>Stein</td><td>Kelli</td><td>*</td></tr>
+				<tr><td>Stephens</td><td>Kristy</td><td>*</td></tr>
+				<tr><td>Wade</td><td>Jaime</td><td>Eight Man</td></tr>
+				<tr><td>Weber</td><td>Mary</td><td>Fly Half</td></tr>
+				<tr><td>Wood</td><td>Deanna</td><td>Second Row</td></tr>
+				<tr><td>Wood</td><td>DK</td><td>*</td></tr>
+				<tr><td>Wright</td><td>Julia</td><td>Full Back</td></tr>
+				<tr><td>Zduniak</td><td>Kelly</td><td>*</td></tr>
+			</table>
 		</div>
 	</div>
 </body>
