--- a/faroster.html
+++ b/faroster.html
@@ -64,7 +64,7 @@
 				<tr><td>Olivo</td><td>Francesca</td><td>Second Row</td></tr>
 				<tr><td>Palazzolo</td><td>Jenna</td><td>*</td></tr>
 				<tr><td>Pereira</td><td>Juliana</td><td>Scrum Half</td></tr>
-				<tr><td>Piket</td><td>Brittany</td><td>Row:23 Cell:3</td></tr>
+				<tr><td>Piket</td><td>Brittany</td><td>Inside Center</td></tr>
 				<tr><td>Rehm</td><td>Lauren</td><td>*</td></tr>
 				<tr><td>Sammon</td><td>Ceara</td><td>Scrum Half</td></tr>
 				<tr><td>Sanford</td><td>Michelle</td><td>*</td></tr>
