--- a/faroster.html
+++ b/faroster.html
@@ -46,7 +46,7 @@
 				<tr><td>Bochicchio</td><td>Jennifer</td><td>Second Row/Eight Man</td></tr>
 				<tr><td>Brill</td><td>Meghan</td><td>Tight-Head Prop</td></tr>
 				<tr><td>Burke</td><td>Carly</td><td>*</td></tr>
-				<tr><td>Camlic</td><td>Sarah</td><td>*</td></tr>
+				<tr><td>Camlic</td><td>Sarah</td><td>Hooker</td></tr>
 				<tr><td>Degnan</td><td>Katherine</td><td>Outside Center</td></tr>
 				<tr><td>Fiorenza</td><td>Kalie</td><td>Prop</td></tr>
 				<tr><td>Foltyn</td><td>Kallie</td><td>*</td></tr>
@@ -56,16 +56,16 @@
 				<tr><td>Imburgia</td><td>Cristina</td><td>Hooker</td></tr>
 				<tr><td>Inch</td><td>Alisha</td><td>*</td></tr>
 				<tr><td>Jackson</td><td>Michelle</td><td>Second Row/Flanker</td></tr>
-				<tr><td>Jane</td><td>Emily</td><td>*</td></tr>
+				<tr><td>Jane</td><td>Emily</td><td>End Wing</td></tr>
 				<tr><td>Lasak</td><td>Jessica</td><td>*</td></tr>
-				<tr><td>McKay</td><td>Marisa</td><td>*</td></tr>
+				<tr><td>McKay</td><td>Marisa</td><td>Flanker</td></tr>
 				<tr><td>Nyman</td><td>Cecelia</td><td>Prop</td></tr>
-				<tr><td>O'Rourke</td><td>Caleigh</td><td>*</td></tr>
+				<tr><td>O'Rourke</td><td>Caleigh</td><td>End Wing</td></tr>
 				<tr><td>Olivo</td><td>Francesca</td><td>Second Row</td></tr>
-				<tr><td>Palazzolo</td><td>Jenna</td><td>*</td></tr>
+				<tr><td>Palazzolo</td><td>Jenna</td><td>Flanker</td></tr>
 				<tr><td>Pereira</td><td>Juliana</td><td>Scrum Half</td></tr>
 				<tr><td>Piket</td><td>Brittany</td><td>Inside Center</td></tr>
-				<tr><td>Rehm</td><td>Lauren</td><td>*</td></tr>
+				<tr><td>Rehm</td><td>Lauren</td><td>End Wing</td></tr>
 				<tr><td>Sammon</td><td>Ceara</td><td>Scrum Half</td></tr>
 				<tr><td>Sanford</td><td>Michelle</td><td>*</td></tr>
 				<tr><td>Smith</td><td>Bethany</td><td>*</td></tr>
@@ -74,7 +74,7 @@
 				<tr><td>Wade</td><td>Jaime</td><td>Eight Man</td></tr>
 				<tr><td>Weber</td><td>Mary</td><td>Fly Half</td></tr>
 				<tr><td>Wood</td><td>Deanna</td><td>Second Row</td></tr>
-				<tr><td>Wood</td><td>DK</td><td>*</td></tr>
+				<tr><td>Wood</td><td>DK</td><td>End Wing</td></tr>
 				<tr><td>Wright</td><td>Julia</td><td>Full Back</td></tr>
 				<tr><td>Zduniak</td><td>Kelly</td><td>*</td></tr>
 			</table>
