--- a/practice.html
+++ b/practice.html
@@ -57,6 +57,18 @@
 				<li>Athletic clothing &mdash; synthetic material is ideal</li>
 				<li>Positive attitude!</li>
 			</ul>
+			<div id="wrapper">
+				<div id="contact">
+					<u>Contact Us</u>
+					<br><span class="glyphicon glyphicon-phone-alt"></span> (607) 727-3930  
+					<br><span class="glyphicon glyphicon-envelope"></span> markminni1@msn.com 
+				</div>
+				<div id="follow">
+					<u>Follow Us</u>
+					<br><a target="_blank" title="follow me on facebook" href="https://www.facebook.com/pages/Southern-Tier-Rugby-Football-Club/689482954440180"><img alt="follow us on facebook" src="http://img.create.net/assets/facebook40x40.png" border=0></a>
+				</div>
+			</div>
+
 		</div>
 	</div>
 </body>
