--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</div>
 			<div id="wrapper">
 				<div id="logo">
-					<img src="logolesswords.jpg" width="500">
+					<img src="logo.png" width="500">
 				</div>
 				<div id="intro">
 					We are committed to promoting the game of rugby within the community in order to encourage maximum participation and enjoyment at all levels. 
