--- a/faroster.html
+++ b/faroster.html
@@ -58,6 +58,7 @@
 				<tr><td>Jackson</td><td>Michelle</td><td>Second Row/Flanker</td></tr>
 				<tr><td>Jane</td><td>Emily</td><td>End Wing</td></tr>
 				<tr><td>Lasak</td><td>Jessica</td><td>*</td></tr>
+				<tr><td>Mare</td><td>Gabrielle</td><td>Second Row</td></tr>
 				<tr><td>McKay</td><td>Marisa</td><td>Flanker</td></tr>
 				<tr><td>Nyman</td><td>Cecelia</td><td>Prop</td></tr>
 				<tr><td>O'Rourke</td><td>Caleigh</td><td>End Wing</td></tr>
