--- a/donations.html
+++ b/donations.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<meta name="keywords" content="rugby, southern tier, fallen angels, youth, women">
+	<meta name="keywords" content="new york state, binghamton, ymca, clinic, roster, rugby, southern tier, fallen angels, youth, women">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<title>Southern Tier Rugby</title>
