--- a/donations.html
+++ b/donations.html
@@ -38,7 +38,7 @@
 				</div>
 			</nav>
 			<div id="sponsors">
-				We are extremely grateful for the generosity of our past and continuing sponsors. If you are interested in donating or sposoring us, please contact us!
+				We are extremely grateful for the generosity of our past and continuing sponsors. If you are interested in donating or sponsoring the team, please contact us!
 			</div>
 			<div id="wrapper">
 				<div id="contact">
