--- a/faroster.html
+++ b/faroster.html
@@ -68,7 +68,7 @@
 				<tr><td>Piket</td><td>Brittany</td><td>Inside Center</td></tr>
 				<tr><td>Rehm</td><td>Lauren</td><td>End Wing</td></tr>
 				<tr><td>Sammon</td><td>Ceara</td><td>Scrum Half</td></tr>
-				<tr><td>Sanford</td><td>Michelle</td><td>*</td></tr>
+				<tr><td>Sanford</td><td>Michelle</td><td>Outside Center</td></tr>
 				<tr><td>Smith</td><td>Bethany</td><td>*</td></tr>
 				<tr><td>Stein</td><td>Kelli</td><td>*</td></tr>
 				<tr><td>Stephens</td><td>Kristy</td><td>*</td></tr>
