--- a/fallenangels.html
+++ b/fallenangels.html
@@ -43,7 +43,7 @@
 				<div id="logo">
 					<img src="ball.jpg" width="500">
 				</div>
-				<div id="intro">
+				<div id="intro2">
 					Fallen Angels RFC<br><br>
 					<div text-align="center">
 						Coaches:<br>
